--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <a href="https://satvikakalikivaya.github.io/HOME_2/">Home</a>
   <!-- Navigation -->
   <header>
     <div class="logo">Home Decor Hub</div>
